2005-04-15  Manish Singh  <yosh@gimp.org>

	* plug-ins/helpbrowser/queue.c: call has_next/prev functions with
	arguments.

2005-04-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c
	* plug-ins/helpbrowser/queue.[ch]: added menu toolbar buttons; not
	functional yet.

2005-04-15  Michael Natterer  <mitch@gimp.org>

	Added loading of Photoshop brushes. Fixes bug #163047:

	* app/core/Makefile.am
	* app/core/gimpbrush-load.[ch]: new files holding all brush
	loading code. Added .abr loader based on a patch by Adrian
	Likins. Didn't add a new brush subclass as in the original patch,
	but only a loading function which loads the brushes into standard
	GimpBrush objects. Did misc fixes to the code, needs further
	cleanup.

	* app/core/gimpbrush.[ch]: removed brush loading code here.

	* app/core/gimpbrushpipe.c: changed #includes accordingly.

	* app/core/gimp.c (gimp_real_initialize): register the new load
	functions and their extensions with the brush factory.

2005-04-15  Simon Budig  <simon@gimp.org>

	* app/tools/gimpnewrectselecttool.c: NULLified the Keyboard
	Shortcut for the new rect select tool (clash with the Crop tool).

2005-04-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: added a simple right-click menu.

2005-04-14  Maurits Rijk  <m.rijk@chello.nl>

	* plug-ins/imagemap/imap_cmd_unselect_all.c 
	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_object_popup.c: removed bunch of
	compilation warnings (spotted by Sven Neumann).

2005-04-14  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawable.[ch] (gimp_drawable_get_tile)
	(gimp_drawable_get_tile2): cleanup gint/gboolean confusion (spotted
	by Maurits Rijk).

2005-04-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: use a GtkUIManager to construct the
	toolbar.

	* plug-ins/ifscompose/ifscompose.c: use gtk_action_set_sensitive().

2005-04-14  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/dialogs/image-new-dialog.c